--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -2,27 +2,66 @@
 
 {% block content %}
 
-    <div class ="col-md-6 offset-md-3">
+    <div class ="col-lg-10 offset-md-1">
 
         {% if user.is_authenticated %}
 
-        <h1>Hello World!</h1>
+        <h1>Customers</h1>
+
+            <table class="table table-striped table-hover table-bordered">
+                <thead class="table-dark">
+                <tr>
+                    <th scope="col">Name</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Phone</th>
+                    <th scope="col">Address</th>
+                    <th scope="col">City</th>
+                    <th scope="col">Country</th>
+                    <th scope="col">Postcode</th>
+                    <th scope="col">Created At</th>
+                    <th scope="col">ID</th>
+                </tr>
+                </thead>
+                <tbody>
+                    <tr>
+
+                        {% if customers %}
+                        {% for customer in customers %}
+                        <tr>
+                            <td>{{ customer.first_name }}
+                            {{ customer.last_name }}</td>
+                            <td>{{ customer.email }}</td>
+                            <td>{{ customer.phone }}</td>
+                            <td>{{ customer.address }}</td>
+                            <td>{{ customer.city }}</td>
+                            <td>{{ customer.country }}</td>
+                            <td>{{ customer.postcode }}</td>
+                            <td>{{ customer.created_at }}</td>
+                            <td><a href="{% url 'customer' customer.id %}">{{ customer.id }}</a></td>
+                        </tr>    
+                            <br/>
+                        {% endfor %}
+                    {% endif %}
+
+                    
+                </tbody>
+            </table>
 
         {% else %}
-        <br></br>
+        <div class ="col-lg-6 offset-md-3">
         <h1>Login</h1>
-        <br></br>
+        <br/>
         <form method="POST" action="{% url 'home' %}">
             {% csrf_token %}
-            <form>
-                <div class="mb-3">
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email", placeholder="Email Address" required>
-                </div>
-                <div class="mb-3">
-                  <input type="password" class="form-control" id="exampleInputPassword1" name="password", placeholder="Password" required>
-                </div>
-                <button type="submit" class="btn btn-primary">Login</button>
-              </form>
+            
+            <div class="mb-3">
+                <input type="text" class="form-control"  name="username", placeholder="Username" required>
+            </div>
+            <div class="mb-3">
+                <input type="password" class="form-control" id="exampleInputPassword1" name="password", placeholder="Password" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Login</button>
+        </div>   
         </form>
     </div>
 
