--- a/website/templates/add_supplier.html
+++ b/website/templates/add_supplier.html
@@ -2,16 +2,16 @@
 {% block content %}
 
 <div class="col-md-6 offset-md-3">
-    <h1>Add Customer Information</h1>
+    <h1>Add Supplier Information</h1>
     <br/>
     
-    <form method="POST" action="{% url 'add_customer' %}">
+    <form method="POST" action="{% url 'add_supplier' %}">
         {% csrf_token %}
     
         {{ form.as_p }}
     
     <br/>
-      <button type="submit" class="btn btn-secondary">Add Customer</button>
+      <button type="submit" class="btn btn-secondary">Add Supplier</button>
        <a href="{% url 'home' %}" class="btn btn-secondary">Back</a>
     
     </form>
