--- a/website/templates/add_exclusion.html
+++ b/website/templates/add_exclusion.html
@@ -8,10 +8,12 @@
     <form method="POST" action="{% url 'add_exclusion' %}">
         {% csrf_token %}
     
-        {{ form.as_p }}
+                <!--{{ form.as_p }}-->
+                {{ wizard.management_form }}
+                {{ wizard.form.as_p }}
     
     <br/>
-      <button type="submit" class="btn btn-secondary">Add Exclusions</button>
+      <button type="submit" value="Submit" class="btn btn-secondary">Submit</button>
        <a href="{% url 'home' %}" class="btn btn-secondary">Back</a>
     
     </form>
