--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -7,6 +7,8 @@
         {% if user.is_authenticated %}
 
         <h1>Customers</h1>
+            <br/>
+        <h4> Click the ID to update or amend any details</h4>
 
             <table class="table table-striped table-hover table-bordered">
                 <thead class="table-dark">
