--- a/website/templates/update_detail.html
+++ b/website/templates/update_detail.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="col-md-6 offset-md-3">
-    <h1>Add Details</h1>
+    <h1>Add Comopany Details</h1>
     <br/>
     
     <form method="POST">
@@ -11,8 +11,8 @@
         {{ form.as_p }}
     
     <br/>
-      <button type="submit" class="btn btn-secondary">Update Customer</button>
-       <a href="{% url 'home' %}" class="btn btn-secondary">Back</a>
+      <button type="submit" class="btn btn-primary">Update Customer</button>
+       <a href="{% url 'home' %}" class="btn btn-secondary">Back to Home</a>
     
     </form>
     
