--- a/website/templates/logout_confirm.html
+++ b/website/templates/logout_confirm.html
@@ -9,8 +9,8 @@
     <br/>
     <br/>
     {% csrf_token %}
-    <button type="submit" name="confirm_logout" value="True" class="btn btn-secondary">Yes, Log Me Out</button>
-    <a href="{% url 'home' %}">Cancel</a>
+    <button type="submit" name="confirm_logout" value="True" class="btn btn-danger">Yes, Log Me Out</button>
+    <a href="{% url 'home' %}" class="btn btn-secondary">Cancel</a>
   </form>
 </div>
 {% endblock %}
